# terncalc

./: Cargo.toml  LICENSE  README.md  build.sh
qt/: cppalloc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.pro  terncalc.h
src/: cppalloc.rs  lib.rs
